# code-scalpel

./: .coveragerc  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .pypirc  .scalpel-license-test  .secrets.baseline  =0.3.8  =2.0.0  AGENTS.md  ARCHITECTURE_IMPLEMENTATION.md  AST_TOOLS_STANDARDIZATION_SUMMARY.md  AUDIT_REPORT.md  CHANGELOG.md  CI_FAILURE_ANALYSIS_v1.1.0.md  CLEANUP_CHECKLIST.md  CODEBASE_EXPLORATION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_REPORT.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.txt  DEVELOPMENT_ROADMAP.md  DOCKER_DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT_COMPLETE_SUMMARY.md  DOCKER_QUICK_START.md  DOCSTRING_ANALYSIS_INDEX.md  DOCSTRING_ANALYSIS_REPORT.md  DOCSTRING_EXAMPLES.md  DOCSTRING_QUICK_SUMMARY.txt  DOCSTRING_SPECIFICATIONS.md  Dockerfile  ENVIRONMENT_VARIABLES.md  INTERVIEW_QUICK_REFERENCE.md  INVENTORY_TRIAGE.md  INVESTIGATION_SUMMARY_v1.1.0.md  JWT_LICENSE_SYSTEM_COMPLETE.md  LICENSE  LOCAL_PIPELINE_ENHANCEMENTS.md  (+99 more)
.bench_tmp/: matrix_stdio_patch_target.py
.claude/: settings.json
.code-scalpel/: GOVERNANCE_PROFILES.md  README.md  agent_limits.yaml  architecture.toml  audit.jsonl  budget.yaml  complexity_history.json  config.json  config.permissive.json  config.restrictive.json  development-2025-01.private.pem  features.toml  governance.minimal.yaml  governance.yaml  limits.toml  policy.manifest.json  policy.yaml  policy_test.yaml  project-structure.yaml  response_config.json  response_config.schema.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.scalpel/: README.md
.test_simple/: test.py
.tmp_tier_fallback/: test.py
artifacts/: TIER_VERIFICATION_EVIDENCE.json  TIER_VERIFICATION_REPORT.md  deprecated_inventory.json  import_validation.json  junit.xml  pipeline_results.json  pipeline_summary.md  tool_compliance.csv  tool_language_requirements_detail.csv  tool_language_requirements_matrix.csv
benchmarks/: java_normalizer_benchmark.py  sample_data_processor.py  sample_java_service.java
capabilities/: README.md  community.json  enterprise.json  free.json  pro.json  schema.json
certs/: cert.pem  key.pem
compliance_reports/: compliance_report.html  compliance_report.json
configs/: server.json
demos/: DEMO_PLAN.md  PRESENTATION_GUIDE.md  README.md
docs/: AI_AGENT_TOOL_GUIDE.md  ARCHITECT_FINAL_REPORT.md  ARCHITECT_REVIEW_DETERMINISM.md  ASSESSMENT_INDEX.md  ASSESSMENT_QUICK_REFERENCE.md  ASSESSMENT_SUMMARY.md  AUTONOMY_INTEGRATION_SUMMARY.md  BEFORE_AFTER_ORGANIZATION.md  BEGINNER_FAQ.md  BEGINNER_GUIDE.md  BETA_OUTREACH_STRATEGY.md  CLI_Init_and_MCP_boot.md  CLI_TOOLS.md  COMPLIANCE_DOCUMENTATION_DELIVERABLES.md  COMPREHENSIVE_GUIDE.md  CONSOLIDATION.md  CUSTOMER_COMMUNICATION_v4.md  Configuration_Guide.md  DETERMINISTIC_IMPLEMENTATION_SUMMARY.md  DETERMINISTIC_PARSING_MIGRATION.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DOCKER_BUILD_SUMMARY.md  DOCUMENT_ORGANIZATION_SUMMARY.md  DOCUMENT_REORGANIZATION_20260108.md  DOC_STRATEGY.md  ENCODING_VALIDATION.md  GITHUB_SECRETS.md  GOVERNANCE_ENFORCEMENT_STATUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_VERIFICATION.md  INDEX.md  INSTALLING_FOR_CLAUDE.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_STATUS.md  JSX_TSX_RESOURCE_TEMPLATES_IMPLEMENTATION.md  JWT_LICENSE_IMPLEMENTATION_GUIDE.md  KNOWN_ISSUES_v3.0.0.md  LICENSE_SETUP.md  MCP_Configuration.md  (+50 more)
evidence/: best_in_class_report.json  best_in_class_validation.py  run_all_benchmarks.py
examples/: Four_Pillars_Demo.ipynb  README.md  autogen_autonomy_example.py  autonomy_audit_example.py  change_budgeting_example.py  compliance_reporting_demo.py  crewai_autonomy_example.py  crewai_refactor_demo.ipynb  deployer_config_example.py  deterministic_parsing_example.py  error_to_diff_example.py  feature_gating_example.py  graph_engine_example.py  jsx_tsx_extraction_example.py  jwt_license_example.py  langgraph_example.py  policy_crypto_verification_example.py  policy_engine_example.py  polyglot_extraction_demo.py  polyglot_usage_guide.py  resource_template_example.py  sandbox_example.py  simple_polyglot_demo.py  surgical_extractor_enhanced_example.py  unified_governance_examples.py  unified_sink_detector_example.py
local_pipeline/: Jenkinsfile  README.md  docker-compose.yml  pipeline.py
release_artifacts/: README.md  comprehensive_validation_evidence.json  release_validation_results.json  v1.5.0_test_evidence.json
scripts/: Code_Scalpel_Prompts.md  analyze_deprecated_code.py  benchmark_code_policy_check.py  benchmark_polyglot.py  build_docs.sh  build_mcpb.py  check_links.py  check_release_content.py  docker_setup.sh  extract_todos.py  fix.sh  generate_capabilities.py  generate_demos.py  generate_mcp_tier_matrix.py  generate_mcp_tools_reference.py  generate_release_artifacts.py  generate_tools_catalog.py  inject_version.py  install_hooks.py  license_env_audit.py  license_env_codmod.py  mcp_security_scan_http.py  mcp_security_scan_stdio.py  mcp_smoke_test.py  mcp_tool_explicit_test.py  mcp_validate_22_tools.py  mcp_validate_enterprise_tier.py  mcp_validate_pro_tier.py  migrate_project_structure.sh  migrate_to_code_scalpel.sh  pipeline.py  policy_manifest_manager.py  prompts.py  quick_security_scan.py  regression_test.py  release.py  release.sh  setup-wizard.sh  smoke.ps1  sync_release_notes.sh  (+13 more)
test-harness/: discovery.py  generate_specs_from_roadmap.py  run_tests.py
testing/: README.md  TRACKING.md
tests/: ARCHITECT_STRESS_TEST.py  MIGRATION_LICENSE.md  README.md  TEST_ORGANIZATION.md  VERIFICATION_REPORT.md  community_tier_test.py  conftest.py  create_init_files.sh  fix_enterprise_tests.py  fix_test_assertions.py  manual_test_no_limits_file.py  organize_remaining.sh  organize_tests.sh  repro_dynamic_imports.py  test_acceptance_criteria.py  test_adversarial.py  test_adversarial_security.py  test_adversarial_v25.py  test_adversarial_v30.py  test_agents.py  test_agents_additional.py  test_agents_comprehensive.py  test_alias_resolver.py  test_analysis_cache.py  test_analysis_tools.py  test_ast_analyzer.py  test_ast_builder_extra.py  test_ast_cache.py  (+177 more)
(+2208 files in other folders)
